chore: Fixed horizontal scrolling bug
Took out Visually Hidden component for the time being, should not affect accessiblity feature

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,6 +19,7 @@ body {
   -webkit-font-smoothing: antialiased;
   font-family: "Poppins", sans-serif;
   overflow-x: hidden;
+  overflow-y: scroll;
 }
 /* 5. Improve media defaults */
 img,
