--- a/client/src/layouts/HomePage/HeroSection/HeroSection.module.css
+++ b/client/src/layouts/HomePage/HeroSection/HeroSection.module.css
@@ -19,6 +19,7 @@
   color: var(--text-secondary-color);
   padding: 20px 14px 16px 14px;
   margin-bottom: 8px;
+  overflow-x: hidden;
   position: relative;
 }
 
